# virtual-supercharger-controller-lab

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  protocol.md
python/: orchestrator.py
src/: controller.cpp  controller.hpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
tests/: controller_test.cpp  e2e_lab.py  protocol_test.cpp  test_orchestrator.py
